--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,11 +15,11 @@
 
 /* main */
 main{
-    background-color: rgb(147, 36, 36);
+    background-color: lightgray
 }
 /* fine main */
 
-
+/* DA RIVEDERE */
 /* nav */
 nav{
     border: 50px;
@@ -49,3 +49,13 @@ input{
     font-size: 10px;: ;
 }
 /* fine text */
+
+/* text-color-blu */
+#text-color-blu{
+    background-color: rgb(0, 162, 255);
+    color: white;
+    border-radius: 8px;
+    padding: 5px;
+    font-size: 10px;
+}
+/* fine text-color-blu */
