--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,9 +73,10 @@ input{
     height: 30px;
     width: 100px;
     border-color: gray;
-    font-size: 10px;: ;
+    font-size: 10px;
 }
 /* fine text */
+
 
 /* text-color-blu */
 #text-color-blu{
