--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,7 @@ nav{
 
 /* main */
 main{
-    background-color: lightgray;
+    background-color: #f6f8f9;
     padding: 30px;
 }
 /* fine main */
