--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,8 +51,10 @@ nav{
 
 /* main */
 main{
-    background-color: white
-    padding: 30px;
+    background-color: white;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 /* fine main */
 
