--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,6 +63,7 @@ main{
 /* buttons */
 #buttons {
     padding: 22px 48px;
+    border-bottom: 2px solid #f6f8f9;
 }
 
 button{
@@ -83,85 +84,19 @@ button{
 
 
 /* lista */
-li{
+#tasks-container{
+    padding: 36px 48px;
+}
+
+h2{
+   color: #454952; 
+}
+
+
+
+ul{
     padding: 0px;
     list-style-type: none;
 }
 /* fine lista */
 
-/* text */
-input{
-    text-align: center;
-    border-radius: 5px;
-    height: 30px;
-    width: 100px;
-    border-color: gray;
-    font-size: 10px;
-}
-/* fine text */
-
-
-/* text-color-blu */
-#text-color-blu{
-    background-color: #45abea;
-    color: white;
-    border-radius: 10px;
-    padding: 5px;
-    font-size: 11px;
-}
-/* fine text-color-blu */
-
-
-/* text-color-violet */
-#text-color-violet{
-    background-color: #9c72e4;
-    color: white;
-    border-radius: 10px;
-    padding: 5px;
-    font-size: 11px;
-}
-/* fine text-color-violet */
-
-
-/* text-color-green */
-#text-color-green{
-    background-color: #64c0a9;
-    color: white;
-    border-radius: 10px;
-    padding: 5px;
-    font-size: 11px;
-}
-/* fine text-color-green */
-
-
-/* text-color-orange */
-#text-color-orange{
-    background-color: #f6b96b;    ;
-    color: white;
-    border-radius: 10px;
-    padding: 5px;
-    font-size: 11px;
-}
-/* fine text-color-orange */
-
-
-/* text-color-pink */
-#text-color-pink{
-    background-color: #d65a9c;
-    color: white;
-    border-radius: 10px;
-    padding: 5px;
-    font-size: 11px;
-}
-/* fine text-color-pink */
-
-
-/* text-color-lightgreen */
-#text-color-lightgreen{
-    background-color: #b0c926;
-    color: white;
-    border-radius: 8px;
-    padding: 5px;
-    font-size: 10px;
-}
-/* fine text-color-lightgreen */
